# mllm_learning

./: .env  .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: cifar10.yaml  cifar10_mocov1.yaml
configs/model/: mocov1.yaml
scripts/: train.py
src/dataset/: __init__.py
src/dataset/cifar10/: custom_cifar10.py  transform.py
src/model/: __init__.py
src/model/encoder/: base_encoder.py  resnet18.py
src/model/moco/: moco.py  mocov1.py
src/utils/common/: common.py  logger.py
